# usagi

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: flags.c++.std.cmake
example/: bullet.cxx  circular_tile.cxx  easy_logger.cxx  http_get.cxx  http_server.cxx  jsonrpc20.cxx  mutex.cxx  wake_ptr.cxx  yieldable_task_system.cxx
include/usagi/: base64.hxx  brotli.hxx  bullet.hxx  chrono.hxx  compiler.hxx  environment.hxx  environment_special_support.hxx  flag.hxx  http.hxx  imgui.hxx  iterator.hxx  memory.hxx  mutex.hxx  url_encode.hxx  zip.hxx
include/usagi/bullet/: discrete_world_type.hxx  rigid_object_generator_type.hxx  rigid_object_type.hxx
include/usagi/cereal/type/: glm.hxx
include/usagi/chrono/: default_clock.hxx  from_iso8601.hxx  time_zone_difference.hxx  to_string_iso8601.hxx  to_time_t.hxx  windows_query_performance_counter_clock.hxx
include/usagi/container/: circular_tile.hxx  indices_2d.hxx
include/usagi/environment_special_support/: ciso646.hxx  emscripten.hxx  use_math_defines.hxx  windows.hxx  winsock.hxx
include/usagi/external_library/: glm.hxx  stb_image.hxx
include/usagi/flag/: wrapper.hxx
include/usagi/gl/: get.hxx  model.hxx  program.hxx  sampler.hxx  texture.hxx  uniform.hxx
include/usagi/gl/model/: animation.hxx  animation_state.hxx  bone.hxx  helper.hxx  material.hxx  mesh.hxx  model.hxx  node.hxx  vertex_buffer.hxx
include/usagi/hash/: sha1.hxx
include/usagi/http/: constant.hxx  delete.hxx  exception.hxx  get.cxx  get.hxx  head.cxx  head.hxx  http_headers_type.cxx  http_headers_type.hxx  http_session_type.cxx  http_session_type.hxx  https_session_type.cxx  https_session_type.hxx  io_service.cxx  io_service.hxx  macro.hxx  path_to_handler_mapper_type.hxx  post.cxx  post.hxx  put.cxx  put.hxx  request.cxx  request.hxx  server_type.cxx  server_type.hxx  split_response.cxx  split_response.hxx  structured_response_type.cxx  structured_response_type.hxx
include/usagi/imgui/: small_button_cloud.hxx  statefull_menu_type.hxx
include/usagi/json/: picojson.hxx
include/usagi/json/picojson/: get_value.hxx  io.hxx  make_array.hxx  make_object.hxx  make_value.hxx  rpc.hxx  set_value.hxx  to_bool.hxx  type.hxx
include/usagi/json/picojson/io/: filesystem.hxx  stream.hxx  string.hxx
include/usagi/json/picojson/io/filesystem/: load.hxx  store.hxx  type.hxx
include/usagi/json/picojson/io/stream/: load.hxx  store.hxx
include/usagi/json/picojson/io/string/: load.hxx  store.hxx
include/usagi/json/picojson/rpc/: jsonrpc20.hxx
include/usagi/json/picojson/rpc/jsonrpc20/: constant.hxx  error_code_type.hxx  exception_type.hxx  get_id.hxx  is_jsonrpc20.hxx  request.hxx  response.hxx  server.hxx  server_type.hxx
include/usagi/json/picojson/rpc/jsonrpc20/request/: extract_request.hxx  get_method.hxx  get_params.hxx  make_request.hxx
include/usagi/json/picojson/rpc/jsonrpc20/response/: make_error.hxx  make_result.hxx
include/usagi/keyboard/: glfw3.hxx
include/usagi/log/: easy_logger.hxx
include/usagi/math/: circular_modulus.hxx
include/usagi/memory/: array_elementsof.hxx  elementsof.hxx  offsetof.hxx  wake_ptr.hxx
include/usagi/mutex/: read_write_mutex.hxx
include/usagi/task_system/: yieldable_task_system.hxx
