cmake_minimum_required(VERSION 3.2)
project(usagi)
install(DIRECTORY include/usagi DESTINATION include)
option(EXAMPLES off)
if ( EXAMPLES )
  include( cmake/flags.c++.std.cmake )
  include_directories( include )
  find_package( Boost REQUIRED COMPONENTS coroutine context )
  include_directories( ${Boost_INCLUDE_DIRS} )
  find_package( Threads REQUIRED )
  add_executable( mutex                 example/mutex.cxx )
  target_link_libraries( mutex ${CMAKE_THREAD_LIBS_INIT} )
  add_executable( circular_tile         example/circular_tile.cxx )
  add_executable( wake_ptr              example/wake_ptr.cxx )
  add_executable( yieldable_task_system example/yieldable_task_system.cxx )
  target_link_libraries( yieldable_task_system ${Boost_LIBRARIES} )
endif()
